resources/sass/app.scss
@import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities";

.notebook {
    outline: none;
    border: none;
    font-size: 1rem;
    padding-bottom: 0.5rem;
    line-height: 1.5rem;
    background-color: transparent;
    background-size: 100% 1.5rem;
    background-image: -webkit-gradient(
        linear,
        left top,
        left bottom,
        color-stop(95%, transparent),
        color-stop(5%, rgba(0, 0, 0, 0.2))
    );
    background-image: linear-gradient(transparent 95%, rgba(0, 0, 0, 0.2) 5%);
    border: none;
}
@media (prefers-color-scheme: dark) {
    :root {
        background: #333f54;
        color: #e2e8f0;
    }

    input.text-gray-700{
        color: #e2e8f0;
    }

    textarea.notebook,
    .search-result-title,
    .search-result {
        background-color: white;
    }
}

